# ScorePfa

./: CMakeLists.txt  README.md  score_addon_dawimport.cpp  score_addon_dawimport.hpp
AbletonTestDir/: testAll.als  testAll.xml
AbletonTestDir/Ableton Project Info/: Project8_1.cfg
DawImport/: ApplicationPlugin.cpp  CreateScore.cpp  CreateScore.hpp  CreateStructs.cpp  CreateStructs.hpp  Debug.cpp  Debug.hpp  ParseStructs.cpp  ParseStructs.hpp  ParseXml.cpp  ParseXml.hpp  Structs.hpp  TrackVisitor.cpp  XmlPaths.hpp  a.out  getXmlElements.cpp  getXmlElements.hpp  gzipSupport.cpp  gzipSupport.hpp  newFunctions.cpp  testVisit.cpp
DawImport/resources/: FIRST.xml  NotJustNotes2.xml  audio1.xml  test.xml  testAll.xml
Documentation/: Doxyfile  mainpage.dox
